# wordle_solver

./: .gitignore  README.md  README.rst  pyproject.toml  scratch.py  scratch3.py
tests/: test_score_by_letter.py
wordinfo/: scoring.py  solver.py  utils.py
wordinfo/data/: full.txt  word_frequency.json  word_ratings.csv
wordinfo/scripts/: benchmark.py  scratch.py  solve_todays_wordle.py
wordinfo/suggesters/: base.py  dominance.py  entropy.py  hybrid.py  rank.py  utils.py
