[tool.poetry]
name = "wordinfo"
version = "0.1.0"
description = ""
authors = ["Chad Dotson <1754094+chaddotson@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"

requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
benchmark_wordle_solver = "wordinfo.scripts.benchmark:run_benchmarks"
solve_todays_wordle = "wordinfo.scripts.solve_todays_wordle:solve_todays_wordle"

[tool.isort]
multi_line_output = 5
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
